crates/snapshot-tests/tests/snapshots/valid__tables__array_many.snap
---
source: crates/snapshot-tests/tests/valid.rs
expression: valid_toml
---
{
  "people": [
    {
      "first_name": "Bruce",
      "last_name": "Springsteen"
    },
    {
      "first_name": "Eric",
      "last_name": "Clapton"
    },
    {
      "first_name": "Bob",
      "last_name": "Seger"
    }
  ]
}
