crates/snapshot-tests/tests/snapshots/valid__tables__implicit_and_explicit_after-2.snap
---
source: crates/snapshot-tests/tests/valid.rs
expression: spans
---
note[integer]: root_a_b_c_answer
  ┌─ implicit_and_explicit_after:3:10
  │
3 │ answer = 42
  │          ^^

note[table]: root_a_b_c
  ┌─ implicit_and_explicit_after:2:1
  │  
2 │ ╭ [a.b.c]
3 │ │ answer = 42
  │ ╰───────────^

note[table]: root_a_b
  ┌─ implicit_and_explicit_after:2:4
  │
2 │ [a.b.c]
  │    ^

note[integer]: root_a_better
  ┌─ implicit_and_explicit_after:6:10
  │
6 │ better = 43
  │          ^^

note[table]: root_a
  ┌─ implicit_and_explicit_after:5:1
  │  
5 │ ╭ [a]
6 │ │ better = 43
  │ ╰───────────^

note[table]: root
  ┌─ implicit_and_explicit_after:1:1
  │  
1 │ ╭ 
2 │ │ [a.b.c]
3 │ │ answer = 42
4 │ │ 
5 │ │ [a]
6 │ │ better = 43
7 │ │ 
  │ ╰^
