crates/snapshot-tests/tests/snapshots/valid__tables__nested_arrays.snap
---
source: crates/snapshot-tests/tests/valid.rs
expression: valid_toml
---
{
  "albums": [
    {
      "name": "Born to Run",
      "songs": [
        {
          "name": "Jungleland"
        },
        {
          "name": "Meeting Across the River"
        }
      ]
    },
    {
      "name": "Born in the USA",
      "songs": [
        {
          "name": "Glory Days"
        },
        {
          "name": "Dancing in the Dark"
        }
      ]
    }
  ]
}
